--- a/register.html
+++ b/register.html
@@ -1,101 +1,203 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-  <meta http-equiv="Cache-Control" content="no-store" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Registro - Bocaraca MMA</title>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Crear cuenta</title>
 
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="icon" href="./assets/favicon-32x32.png" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <link rel="icon" href="./assets/favicon-32x32.png">
+  <link rel="stylesheet" href="./css/style.css"/>
 
-  <link rel="manifest" href="./manifest.webmanifest">
-  <meta name="theme-color" content="#0d1117">
-  <!-- iOS “Add to Home Screen” -->
-  <link rel="apple-touch-icon" href="./assets/android-chrome-512x512.png">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <!-- agregado para quitar el warning -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-</head>
+  <!-- Estilos específicos SOLO para registro -->
+<style>
+  /* Anula empujes globales SOLO aquí */
+  html, body { margin:0 !important; padding:0 !important; overflow-x:hidden; }
+  body.page-register { display:block !important; min-height:auto !important; }
 
-<body>
-<main class="container">
-  <div class="container">
-    <img src="./assets/android-chrome-512x512.png" alt="Logo Bocaraca MMA" class="logo-img" />
-    <p class="company-name">Bocaraca MMA</p>
-  </div>
+  /* Utilidad */
+  .hidden{ display:none !important; }
 
-  <div class="container">
-    <!-- Formulario de registro -->
-    <form id="registerForm" autocorrect="off" autocapitalize="off" spellcheck="false" novalidate class="card" autocomplete="off">
-      <h2>Registro</h2>
-
-      <label for="nombre">Nombre Completo</label>
-      <input type="text" id="nombre" name="fullName" required autocomplete="off" placeholder="Ej: Juan Pérez"
-             inputmode="text" pattern="^[a-zA-ZáéíóúÁÉÍÓÚñÑ\\s]{2,}$"
-             title="Usa solo letras y espacios (mínimo 2 caracteres)">
-
-      <label for="cedula">Cédula</label>
-      <input type="text" id="cedula" inputmode="numeric" name="cedula" required maxlength="9"
-             placeholder="Ej: 0XXXXXXXX" pattern="^\\d{9}$"
-             title="Exactamente 9 dígitos, incluido el 0 inicial">
-
-      <label for="phone">Celular</label>
-      <input type="tel" id="phone" inputmode="numeric" name="phone" required maxlength="8"
-             placeholder="Ej: 70001234" pattern="^\\d{8}$"
-             title="Exactamente 8 dígitos">
-
-      <label for="email">Correo Electrónico</label>
-      <input type="email" id="email" name="email" required autocomplete="off">
-
-      <label for="password">Contraseña</label>
-      <input type="password" id="password" name="password" required autocomplete="new-password">
-
-      <button type="submit">Registrarse</button>
-      <p>¿Ya tienes cuenta? <a href="./index.html">Inicia sesión</a></p>
-    </form>
-  </div>
-</main>
-
-<!-- Toast Container -->
-<div id="toast-container"></div>
-
-<!-- Script principal de registro -->
-<script type="module" src="./js/register.js"></script>
-
-<!-- Redirección automática si ya está logueado (NO toca inputs) -->
-<script type="module">
-  import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
-  import { app } from './js/firebase-config.js';
-
-  const auth = getAuth(app);
-  onAuthStateChanged(auth, (user) => {
-    if (user) {
-      const adminEmails = ["luis.davidsolorzano@outlook.es", "ivan.cicc@hotmail.com"];
-      const destination = adminEmails.includes(user.email)
-        ? './admin-dashboard.html'
-        : './client-dashboard.html';
-      window.location.href = destination;
-    }
-  });
-</script>
-
-<footer>
-  <p class="footer">© 2025 <a href="https://github.com/luisillo1cr" target="_blank">luisillo1cr</a>. Todos los derechos reservados.</p>
-</footer>
-
-<script>
-  // PWA
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', () => {
-      navigator.serviceWorker.register('./service-worker.js').catch(()=>{});
-    });
+  /* Lienzo */
+  .reg-page{
+    width:100%;
+    max-width:760px;
+    margin:72px auto 24px;
+    padding:0 10px;              /* margen mínimo simétrico */
+    box-sizing:border-box;
   }
-</script>
+
+  /* Tarjeta del form: más angosta (se acabó el recorte en móvil) */
+  .reg-card{
+    width:min(90vw, 420px);      /* <— clave: de 520px a 420px */
+    margin:0 auto;
+    background:#161b22;
+    border:1px solid #30363d;
+    border-radius:14px;
+    padding:14px;
+    box-shadow:0 8px 24px rgba(0,0,0,.35);
+  }
+  .reg-card h1{
+    margin:0 0 8px;
+    text-align:center;
+    font-size:clamp(1.1rem,4.4vw,1.45rem);
+    font-weight:800;
+  }
+
+  .reg-form{ display:grid; gap:10px; }
+  .reg-row-2{ display:grid; gap:10px; grid-template-columns:1fr; }
+  @media (min-width:600px){ .reg-row-2{ grid-template-columns:1fr 1fr; } }
+
+  .reg-form label{ color:#9aa4ad; font-size:.9rem; }
+
+  .reg-form input,
+  .reg-form select{
+    width:100%;
+    padding:10px 12px;           /* campos más bajos */
+    border-radius:10px;
+    background:#21262d;
+    border:1px solid #30363d;
+    color:#e6edf3;
+    outline:none;
+    box-sizing:border-box;
+  }
+  .reg-form input:focus,
+  .reg-form select:focus{
+    border-color:#58a6ff;
+    box-shadow:0 0 0 2px rgba(88,166,255,.15);
+  }
+  .reg-form select{ -webkit-appearance:none; appearance:none; padding-right:2.2rem; }
+  .hint{ color:#8b949e; font-size:.85rem; margin-top:2px; }
+
+  .reg-actions{
+    display:flex; gap:10px; justify-content:center; margin-top:8px;
+  }
+  .btn{
+    min-width:150px; padding:10px 14px; border-radius:10px;
+    font-weight:800; border:1px solid transparent; cursor:pointer;
+  }
+  .btn.primary{ background:#238636; color:#fff; }
+  .btn.primary:hover{ background:#2ea043; }
+  .btn.outline{ background:#7a252c; color:#fff; }
+  .btn.outline:hover{ background:#7a252c; }
+
+  /* Por si algún contenedor global inyecta padding */
+  .reg-page .container{ width:100%; margin:0 auto; padding:0 !important; }
+  /* Botones del registro: no estirar, y "Cancelar" más pequeño */
+  .actions .btn,
+  .reg-actions .btn{
+    width: auto !important;
+    flex: 0 0 auto;          /* no ocupar todo el ancho */
+  }
+
+  .actions .btn.primary,
+  .reg-actions .btn.primary{
+    min-width: 160px;        /* "Crear cuenta" un poco más ancho */
+  }
+
+  .actions .btn.outline,
+  .reg-actions .btn.outline{
+    min-width: 110px;        /* "Cancelar" compacto */
+    padding-inline: 16px;
+  }
+
+</style>
+
+</head>
+<body class="auth-center page-register">
+
+  <main class="reg-page">
+    <section class="reg-card">
+      <h1>Crear cuenta</h1>
+
+      <form id="registerForm" class="reg-form" novalidate>
+        <!-- Nombre y Apellidos -->
+        <div class="reg-row-2">
+          <div>
+            <label for="nombre">Nombre</label>
+            <input id="nombre" type="text" autocomplete="given-name" placeholder="Tu nombre"/>
+          </div>
+          <div>
+            <label for="apellidos">Apellidos</label>
+            <input id="apellidos" type="text" autocomplete="family-name" placeholder="Tus apellidos"/>
+          </div>
+        </div>
+
+        <!-- Tipo de documento -->
+        <div class="reg-row-2">
+          <div>
+            <label for="cedulaTipo">Tipo de identificación</label>
+            <select id="cedulaTipo">
+              <option value="nacional" selected>Cédula nacional (CR)</option>
+              <option value="extranjera">Documento extranjero</option>
+            </select>
+          </div>
+          <div></div>
+        </div>
+
+        <!-- Cédula CR (9 dígitos) -->
+        <div id="wrapCedulaCR">
+          <label for="cedula">Cédula (9 dígitos)</label>
+          <input id="cedula" type="tel" inputmode="numeric" placeholder="#0###0### (solo números)"/>
+          <div class="hint">Se usará para evitar duplicados.</div>
+        </div>
+
+        <!-- Documento extranjero -->
+        <div id="wrapCedulaExt" class="hidden" aria-hidden="true">
+          <label for="cedulaExtranjera">Documento extranjero</label>
+          <input id="cedulaExtranjera" type="text" placeholder="Ej: A123-XYZ-987"/>
+          <div class="hint">6–20 caracteres (letras, números y guiones).</div>
+        </div>
+
+        <!-- Celular -->
+        <div>
+          <label for="phone">Celular</label>
+          <input id="phone" type="tel" inputmode="numeric" placeholder="######## (8 dígitos)"/>
+        </div>
+
+        <!-- Correo y contraseña -->
+        <div class="reg-row-2">
+          <div>
+            <label for="email">Correo</label>
+            <input id="email" type="email" autocomplete="email" placeholder="tucuenta@correo.com"/>
+          </div>
+          <div>
+            <label for="password">Contraseña</label>
+            <input id="password" type="password" autocomplete="new-password" placeholder="Mínimo 8 caracteres"/>
+          </div>
+        </div>
+
+        <!-- Género y nacimiento -->
+        <div class="reg-row-2">
+          <div>
+            <label for="genero">Género</label>
+            <select id="genero">
+              <option value="no_especificado" selected>Prefiero no decir</option>
+              <option value="masculino">Masculino</option>
+              <option value="femenino">Femenino</option>
+              <option value="no_binario">No binario</option>
+              <option value="otro">Otro</option>
+            </select>
+          </div>
+          <div>
+            <label for="birthDate">Fecha de nacimiento</label>
+            <input id="birthDate" type="date"/>
+          </div>
+        </div>
+
+        <div class="reg-actions">
+          <button type="submit" class="btn primary">Crear cuenta</button>
+          <a class="btn outline" href="./index.html">Cancelar</a>
+        </div>
+
+        <p class="hint" style="text-align:center;margin-top:6px;">
+          Al registrarte aceptas nuestros términos y políticas.
+        </p>
+      </form>
+    </section>
+  </main>
+
+  <!-- Firebase + registro -->
+  <script type="module" src="./js/firebase-config.js"></script>
+  <script type="module" src="./js/register.js"></script>
 </body>
 </html>
