--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <link rel="icon" type="image/png" href="./assets/favicon.ico" />
   
-  <link rel="manifest" href="./manifest.webmanifest">
+  <link rel="manifest" href="./manifest.webmanifest?v=2025.10.20.v1">
   <meta name="theme-color" content="#0d1117">
 
 <!-- iOS -->
@@ -190,6 +190,8 @@
   }
 </script>
 <script type="module" src="./js/pwa-install.js"></script>
+
+<script type="module" src="./js/sw-register.js"></script>
 
 </body>
 </html>
