--- a/profile.html
+++ b/profile.html
@@ -129,7 +129,6 @@
     <ul>
       <li><a href="client-dashboard.html"><span>🏠</span>Inicio</a></li>
       <li><a href="profile.html"><span>👤</span>Mi perfil</a></li>
-      <li><a href="events.html"><span>🎫</span>Eventos</a></li>
       <li><a id="logoutSidebar" href="#"><span>🚪</span>Cerrar sesión</a></li>
     </ul>
   </aside>
@@ -218,7 +217,12 @@
 
   <!-- Firebase + app -->
   <script type="module" src="./js/firebase-config.js"></script>
+
   <script type="module" src="./js/profile.js"></script>
+
   <script type="module" src="./js/showAlert.js"></script>
+  
+  <script type="module" src="./js/sw-register.js"></script>
+
 </body>
 </html>
