--- a/register.html
+++ b/register.html
@@ -198,6 +198,10 @@
 
   <!-- Firebase + registro -->
   <script type="module" src="./js/firebase-config.js"></script>
+
   <script type="module" src="./js/register.js"></script>
+  
+  <script type="module" src="./js/sw-register.js"></script>
+
 </body>
 </html>
