--- a/control-mensualidades.html
+++ b/control-mensualidades.html
@@ -12,13 +12,32 @@
   <link rel="icon" href="./assets/favicon-32x32.png" type="image/x-icon"/>
   <script src="https://unpkg.com/lucide@latest"></script>
 
-  <link rel="manifest" href="./manifest.webmanifest">
+  <link rel="manifest" href="./manifest.webmanifest?v=2025.10.20.v1">
   <meta name="theme-color" content="#0d1117">
 
   <!-- iOS “Add to Home Screen” soporte -->
   <link rel="apple-touch-icon" href="./assets/android-chrome-512x512.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+<style>
+  /* ====== Search bar local ====== */
+  .search-bar{
+    display:flex;align-items:center;gap:10px;
+    max-width:520px;margin:8px 0 6px;
+    padding:8px 12px;border-radius:12px;
+    background:#0f131a;border:1px solid #2b2f38;
+  }
+  .search-bar i{opacity:.75}
+  .search-bar input{all:unset;width:100%;color:#e6e8eb}
+  .search-bar .btn-ghost{
+    border:none;background:transparent;cursor:pointer;
+    padding:4px 6px;border-radius:8px;
+  }
+  .search-bar .btn-ghost:hover{background:#1a2030}
+
+</style>
+
 
 </head>
 <body>
@@ -34,9 +53,7 @@
       <li><a href="./usuarios.html"><i class="bi bi-people-fill"></i> Usuarios</a></li>
       <li><a href="./control-mensualidades.html"><i class="bi bi-cash-coin"></i> Mensualidades</a></li>
       <li><a href="./admin-users.html"><i class="bi bi-person-rolodex"></i></i> Roles</a></li>
-      <li><a href="./marcar-asistencia.html"><i class="bi bi-person-bounding-box"></i> Asistencias</a></li>
-      <li><a href="./reportes.html"><i class="bi bi-file-earmark-text-fill"></i> Reportes</a></li>
-      <li><a href="./admin-events.html"><i class="bi bi-calendar-week"></i>Crear Evento</a></li>
+      <li><a href="./reportes.html"><i class="bi bi-file-earmark-text-fill"></i> Reportes</a></li>      
       <li><a href="#" id="logoutSidebar"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a></li>
     </ul>
   </nav>
@@ -67,6 +84,14 @@
       </label>
     </div>
 
+    <!-- Búsqueda -->
+    <div class="search-bar">
+      <i class="bi bi-search"></i>
+      <input id="searchText" type="search" placeholder="Buscar por nombre o correo" autocomplete="off">
+      <button id="clearSearch" class="btn-ghost" type="button" title="Limpiar" aria-label="Limpiar">
+        <i class="bi bi-x-lg"></i>
+      </button>
+    </div>
 
       <!-- tabla (desktop) / tarjetas (móvil) -->
       <div class="table-container">
@@ -92,18 +117,12 @@
     <p>© 2025 <a href="https://github.com/luisillo1cr" target="_blank">luisillo1cr</a>. Todos los derechos reservados.</p>
   </footer>
 
-  <script type="module" src="./js/control-mensualidades.js"></script>
-  <!-- Bootstrap JS (bundle con Popper) por si lo necesitas en otras pantallas -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script type="module" src="./js/control-mensualidades.js"></script>
 
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('./service-worker.js')
-          .catch(console.error);
-      });
-    }
-  </script>
+<!-- Bootstrap JS (bundle con Popper) por si lo necesitas en otras pantallas -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<script type="module" src="./js/sw-register.js"></script>
 
 </body>
 </html>
