--- a/usuarios.html
+++ b/usuarios.html
@@ -15,7 +15,7 @@
 
   <!-- iOS “Add to Home Screen” soporte -->
   <link rel="apple-touch-icon" href="./assets/android-chrome-512x512.png">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 <style>
