--- a/admin-users.html
+++ b/admin-users.html
@@ -14,7 +14,7 @@
 
   <!-- iOS A2HS -->
   <link rel="apple-touch-icon" href="./assets/android-chrome-512x512.png">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
