--- a/client-dashboard.html
+++ b/client-dashboard.html
@@ -28,7 +28,7 @@
 
 <!-- iOS -->
 <link rel="apple-touch-icon" href="./assets/android-chrome-512x512.png">
-<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="Bocaraca">
 
