--- a/profile.html
+++ b/profile.html
@@ -125,13 +125,13 @@
   <button id="toggleNav" class="hamburger-btn" aria-label="Abrir menú">☰</button>
 
   <!-- Sidebar -->
-  <aside id="sidebar" class="sidebar">
+  <nav id="sidebar" class="sidebar">
     <ul>
-      <li><a href="client-dashboard.html"><span>🏠</span>Inicio</a></li>
-      <li><a href="profile.html"><span>👤</span>Mi perfil</a></li>
-      <li><a id="logoutSidebar" href="#"><span>🚪</span>Cerrar sesión</a></li>
+      <li><a href="./client-dashboard.html"><i class="bi bi-house-fill"></i> Inicio</a></li>
+      <li><a href="./profile.html"><i class="bi bi-person-circle"></i> Mi perfil</a></li>
+      <li><a id="logoutSidebar" href="#"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a></li>
     </ul>
-  </aside>
+  </nav>
 
   <main class="profile-shell">
     <section class="card profile-card">
