--- a/profile.html
+++ b/profile.html
@@ -19,8 +19,9 @@
   <!-- Sidebar -->
   <nav id="sidebar" class="sidebar">
     <ul>
-      <li><a href="./client-dashboard.html"><i class="bi bi-house-fill"></i> Inicio</a></li>
-      <li><a href="./profile.html" class="active"><i class="bi bi-person-circle"></i> Mi perfil</a></li>
+      <li><a href="./profile.html"><i class="bi bi-person-circle"></i>Mi perfil</a></li>
+      <li><a href="./client-dashboard.html"><i class="bi bi-calendar3"></i>Calendario</a></li>
+      <li><a href="./client-pagos.html"><i class="bi bi-receipt"></i>Realizar Pagos</a></li>
       <li><a id="logoutSidebar" href="#"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a></li>
     </ul>
   </nav>
