--- a/client-dashboard.html
+++ b/client-dashboard.html
@@ -28,8 +28,9 @@
   <!-- Sidebar -->
   <nav id="sidebar" class="sidebar">
     <ul>
-      <li><a href="./client-dashboard.html"><i class="bi bi-house-fill"></i> Inicio</a></li>
-      <li><a href="./profile.html"><i class="bi bi-person-circle"></i> Mi perfil</a></li>
+      <li><a href="./profile.html"><i class="bi bi-person-circle"></i>Mi perfil</a></li>
+      <li><a href="./client-dashboard.html"><i class="bi bi-calendar3"></i>Calendario</a></li>
+      <li><a href="./client-pagos.html"><i class="bi bi-receipt"></i>Realizar Pagos</a></li>
       <li><a id="navInstall" href="#"><i class="bi bi-download"></i> Instalar app</a></li>
       <li><a id="navInstallIOS" href="#"><i class="bi bi-apple"></i> ¿iPhone?</a></li>
       <li><a id="navHardReset" href="#"><i class="bi bi-arrow-repeat"></i> Forzar actualización</a></li>
