--- a/admin-roles.html
+++ b/admin-roles.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Panel de Usuarios</title>
+  <title>Panel de Roles</title>
 
   <!-- PWA -->
   <meta name="mobile-web-app-capable" content="yes" />
-  <link rel="manifest" href="./manifest.webmanifest?v=2025.10.20.v7">
+  <link rel="manifest" href="./manifest.webmanifest?v=2025.11.02.v1">
   <meta name="theme-color" content="#0d1117">
 
   <link rel="icon" href="./assets/favicon-32x32.png" type="image/x-icon">
