--- a/admin-metrics.html
+++ b/admin-metrics.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Métricas | Bocaraca</title>
+  <title>Panel de Métricas</title>
 
   <link rel="icon" href="./assets/favicon-32x32.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <script src="https://unpkg.com/lucide@latest"></script>
 
-  <link rel="manifest" href="./manifest.webmanifest?v=2025.10.20.v7">
+  <link rel="manifest" href="./manifest.webmanifest?v=2025.11.02.v1">
   <meta name="theme-color" content="#0d1117">
 
   <!-- iOS “Add to Home Screen” soporte -->
