--- a/register.html
+++ b/register.html
@@ -7,118 +7,27 @@
 
   <link rel="icon" href="./assets/favicon-32x32.png">
   <link rel="stylesheet" href="./css/style.css"/>
-
-  <!-- Estilos específicos SOLO para registro -->
-<style>
-  /* Anula empujes globales SOLO aquí */
-  html, body { margin:0 !important; padding:0 !important; overflow-x:hidden; }
-  body.page-register { display:block !important; min-height:auto !important; }
-
-  /* Utilidad */
-  .hidden{ display:none !important; }
-
-  /* Lienzo */
-  .reg-page{
-    width:100%;
-    max-width:760px;
-    margin:72px auto 24px;
-    padding:0 10px;              /* margen mínimo simétrico */
-    box-sizing:border-box;
-  }
-
-  /* Tarjeta del form: más angosta (se acabó el recorte en móvil) */
-  .reg-card{
-    width:min(90vw, 420px);      /* <— clave: de 520px a 420px */
-    margin:0 auto;
-    background:#161b22;
-    border:1px solid #30363d;
-    border-radius:14px;
-    padding:14px;
-    box-shadow:0 8px 24px rgba(0,0,0,.35);
-  }
-  .reg-card h1{
-    margin:0 0 8px;
-    text-align:center;
-    font-size:clamp(1.1rem,4.4vw,1.45rem);
-    font-weight:800;
-  }
-
-  .reg-form{ display:grid; gap:10px; }
-  .reg-row-2{ display:grid; gap:10px; grid-template-columns:1fr; }
-  @media (min-width:600px){ .reg-row-2{ grid-template-columns:1fr 1fr; } }
-
-  .reg-form label{ color:#9aa4ad; font-size:.9rem; }
-
-  .reg-form input,
-  .reg-form select{
-    width:100%;
-    padding:10px 12px;           /* campos más bajos */
-    border-radius:10px;
-    background:#21262d;
-    border:1px solid #30363d;
-    color:#e6edf3;
-    outline:none;
-    box-sizing:border-box;
-  }
-  .reg-form input:focus,
-  .reg-form select:focus{
-    border-color:#58a6ff;
-    box-shadow:0 0 0 2px rgba(88,166,255,.15);
-  }
-  .reg-form select{ -webkit-appearance:none; appearance:none; padding-right:2.2rem; }
-  .hint{ color:#8b949e; font-size:.85rem; margin-top:2px; }
-
-  .reg-actions{
-    display:flex; gap:10px; justify-content:center; margin-top:8px;
-  }
-  .btn{
-    min-width:150px; padding:10px 14px; border-radius:10px;
-    font-weight:800; border:1px solid transparent; cursor:pointer;
-  }
-  .btn.primary{ background:#238636; color:#fff; }
-  .btn.primary:hover{ background:#2ea043; }
-  .btn.outline{ background:#7a252c; color:#fff; }
-  .btn.outline:hover{ background:#7a252c; }
-
-  /* Por si algún contenedor global inyecta padding */
-  .reg-page .container{ width:100%; margin:0 auto; padding:0 !important; }
-  /* Botones del registro: no estirar, y "Cancelar" más pequeño */
-  .actions .btn,
-  .reg-actions .btn{
-    width: auto !important;
-    flex: 0 0 auto;          /* no ocupar todo el ancho */
-  }
-
-  .actions .btn.primary,
-  .reg-actions .btn.primary{
-    min-width: 160px;        /* "Crear cuenta" un poco más ancho */
-  }
-
-  .actions .btn.outline,
-  .reg-actions .btn.outline{
-    min-width: 110px;        /* "Cancelar" compacto */
-    padding-inline: 16px;
-  }
-
-</style>
-
 </head>
-<body class="auth-center page-register">
 
+<body class="auth-center page-register">
   <main class="reg-page">
     <section class="reg-card">
-      <h1>Crear cuenta</h1>
+      <div class="reg-head">
+        <img class="reg-logo" src="./assets/android-chrome-512x512.png" alt="Bocaraca MMA">
+        <h1>Crear cuenta</h1>
+        <p class="reg-subtitle">Únete y gestiona tus clases desde tu móvil</p>
+      </div>
 
       <form id="registerForm" class="reg-form" novalidate>
         <!-- Nombre y Apellidos -->
         <div class="reg-row-2">
           <div>
             <label for="nombre">Nombre</label>
-            <input id="nombre" type="text" autocomplete="given-name" placeholder="Tu nombre"/>
+            <input id="nombre" type="text" autocomplete="given-name" placeholder="Tu nombre">
           </div>
           <div>
             <label for="apellidos">Apellidos</label>
-            <input id="apellidos" type="text" autocomplete="family-name" placeholder="Tus apellidos"/>
+            <input id="apellidos" type="text" autocomplete="family-name" placeholder="Tus apellidos">
           </div>
         </div>
 
@@ -134,36 +43,59 @@
           <div></div>
         </div>
 
-        <!-- Cédula CR (9 dígitos) -->
+        <!-- Cédula CR -->
         <div id="wrapCedulaCR">
           <label for="cedula">Cédula (9 dígitos)</label>
-          <input id="cedula" type="tel" inputmode="numeric" placeholder="#0###0### (solo números)"/>
+          <input id="cedula" type="tel" inputmode="numeric" placeholder="#0###0### (solo números)">
           <div class="hint">Se usará para evitar duplicados.</div>
         </div>
 
         <!-- Documento extranjero -->
         <div id="wrapCedulaExt" class="hidden" aria-hidden="true">
           <label for="cedulaExtranjera">Documento extranjero</label>
-          <input id="cedulaExtranjera" type="text" placeholder="Ej: A123-XYZ-987"/>
+          <input id="cedulaExtranjera" type="text" placeholder="Ej: A123-XYZ-987">
           <div class="hint">6–20 caracteres (letras, números y guiones).</div>
         </div>
 
         <!-- Celular -->
         <div>
           <label for="phone">Celular</label>
-          <input id="phone" type="tel" inputmode="numeric" placeholder="######## (8 dígitos)"/>
+          <input id="phone" type="tel" inputmode="numeric" placeholder="######## (8 dígitos)">
         </div>
 
-        <!-- Correo y contraseña -->
-        <div class="reg-row-2">
-          <div>
-            <label for="email">Correo</label>
-            <input id="email" type="email" autocomplete="email" placeholder="tucuenta@correo.com"/>
+        <!-- Correo: input group (usuario + dominio) -->
+        <div>
+          <label for="emailLocal">Correo</label>
+          <div class="email-group" role="group" aria-label="Correo electrónico">
+            <input id="emailLocal" type="text" placeholder="tu.usuario" autocomplete="off">
+            <button type="button" id="emailDomainBtn" class="email-addon" aria-haspopup="listbox" aria-expanded="false">
+              <span class="at">@</span><span id="emailDomainText">gmail.com</span>
+              <span class="chev">▾</span>
+            </button>
+
+            <!-- menú de dominios -->
+            <ul id="emailMenu" class="email-menu" role="listbox" hidden>
+              <li class="item" data-domain="gmail.com">@gmail.com</li>
+              <li class="item" data-domain="gmail.es">@gmail.es</li>
+              <li class="item" data-domain="hotmail.com">@hotmail.com</li>
+              <li class="item" data-domain="hotmail.es">@hotmail.es</li>
+              <li class="item" data-domain="outlook.com">@outlook.com</li>
+              <li class="item" data-domain="outlook.es">@outlook.es</li>
+              <li class="item" data-domain="yahoo.com">@yahoo.com</li>
+              <li class="item" data-domain="icloud.com">@icloud.com</li>
+              <li class="item" data-domain="proton.me">@proton.me</li>
+              <li class="item" data-domain="live.com">@live.com</li>
+            </ul>
           </div>
-          <div>
-            <label for="password">Contraseña</label>
-            <input id="password" type="password" autocomplete="new-password" placeholder="Mínimo 8 caracteres"/>
-          </div>
+          <!-- valor compuesto (lo rellena register.js) -->
+          <input type="hidden" id="emailFull">
+          <div class="hint">Escribe solo la parte antes de @ y elige el dominio.</div>
+        </div>
+
+        <!-- Contraseña -->
+        <div>
+          <label for="password">Contraseña</label>
+          <input id="password" type="password" autocomplete="new-password" placeholder="Mínimo 8 caracteres">
         </div>
 
         <!-- Género y nacimiento -->
@@ -180,7 +112,7 @@
           </div>
           <div>
             <label for="birthDate">Fecha de nacimiento</label>
-            <input id="birthDate" type="date"/>
+            <input id="birthDate" type="date">
           </div>
         </div>
 
@@ -189,18 +121,14 @@
           <a class="btn outline" href="./index.html">Cancelar</a>
         </div>
 
-        <p class="hint" style="text-align:center;margin-top:6px;">
-          Al registrarte aceptas nuestros términos y políticas.
-        </p>
+        <p class="hint t-center">Al registrarte aceptas nuestros términos y políticas.</p>
       </form>
     </section>
   </main>
 
-  <!-- Firebase + registro -->
+  <!-- Firebase + App -->
   <script type="module" src="./js/firebase-config.js"></script>
-
   <script type="module" src="./js/register.js"></script>
-  
   <script type="module" src="./js/sw-register.js"></script>
 
 </body>
