--- a/client-pagos.html
+++ b/client-pagos.html
@@ -14,9 +14,8 @@
   <button id="toggleNav" class="hamburger-btn" aria-label="Abrir menú"><i class="bi bi-list"></i></button>
   <nav id="sidebar" class="sidebar">
     <ul>
-      <li><a href="./profile.html"><i class="bi bi-person-circle"></i>Mi perfil</a></li>
+      <li><a href="./client-profile.html"><i class="bi bi-person-circle"></i>Mi perfil</a></li>
       <li><a href="./client-dashboard.html"><i class="bi bi-calendar3"></i>Calendario</a></li>
-      <li><a href="./client-pagos.html"><i class="bi bi-receipt"></i>Realizar Pagos</a></li>
       <li><a id="logoutSidebar" href="#"><i class="bi bi-box-arrow-right"></i>Cerrar sesión</a></li>
     </ul>
   </nav>
@@ -86,9 +85,6 @@
       </form>
     </section>
 
-    <footer class="footer" style="text-align:center;color:#8b949e;margin-top:14px;">
-      © 2025 <a href="https://github.com/luisillo1cr" target="_blank">luisillo1cr</a>. Todos los derechos reservados.
-    </footer>
   </main>
 
   <script type="module" src="./js/client-pagos.js"></script>
