--- a/client-profile.html
+++ b/client-profile.html
@@ -19,7 +19,6 @@
   <!-- Sidebar -->
   <nav id="sidebar" class="sidebar">
     <ul>
-      <li><a href="./profile.html"><i class="bi bi-person-circle"></i>Mi perfil</a></li>
       <li><a href="./client-dashboard.html"><i class="bi bi-calendar3"></i>Calendario</a></li>
       <li><a href="./client-pagos.html"><i class="bi bi-receipt"></i>Realizar Pagos</a></li>
       <li><a id="logoutSidebar" href="#"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a></li>
@@ -125,14 +124,11 @@
       </div>
     </section>
 
-    <footer class="footer muted centered">
-      © 2025 <a href="https://github.com/luisillo1cr" target="_blank">luisillo1cr</a>. Todos los derechos reservados.
-    </footer>
   </main>
 
   <script type="module" src="./js/firebase-config.js"></script>
   <script type="module" src="./js/showAlert.js"></script>
-  <script type="module" src="./js/profile.js"></script>
+  <script type="module" src="./js/client-profile.js"></script>
   <script type="module" src="./js/sw-register.js"></script>
 </body>
 </html>
