--- a/events.html
+++ b/events.html
@@ -72,7 +72,7 @@
   <aside id="sidebar" class="sidebar">
     <ul>
       <li><a href="client-dashboard.html"><span>🏠</span>Inicio</a></li>
-      <li><a href="profile.html"><span>👤</span>Mi perfil</a></li>
+      <li><a href="client-profile.html"><span>👤</span>Mi perfil</a></li>
       <li><a href="events.html"><span>🎫</span>Eventos</a></li>
       <li><a id="logoutSidebar" href="#"><span>🚪</span>Cerrar sesión</a></li>
     </ul>
@@ -118,11 +118,6 @@
       </div>
     </div>
   </div>
-
-  <!-- Footer común -->
-  <footer>
-    <p>© 2025 <a href="https://github.com/luisillo1cr" target="_blank">luisillo1cr</a>. Todos los derechos reservados.</p>
-  </footer>
 
   <script type="module" src="./js/notifications.js"></script>
   <!-- Bootstrap Bundle (JS + Popper) -->
