--- a/marcar-asistencia.html
+++ b/marcar-asistencia.html
@@ -33,7 +33,7 @@
       <li><a href="./usuarios.html"><i class="bi bi-people-fill"></i> Usuarios</a></li>
       <li><a href="./control-mensualidades.html"><i class="bi bi-cash-coin"></i> Mensualidades</a></li>
       <li><a href="./admin-users.html"><i class="bi bi-person-rolodex"></i></i> Roles</a></li>
-      <li><a href="./reportes.html"><i class="bi bi-file-earmark-text-fill"></i> Reportes</a></li>
+      <li><a href="./admin-reportes.html"><i class="bi bi-file-earmark-text-fill"></i> Reportes</a></li>
       <li><a href="./admin-metrics.html"><i class="bi bi-pie-chart-fill"></i></i> Metricas</a></li>
       <li><a href="#" id="logoutSidebar"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a></li>
     </ul>
@@ -59,10 +59,6 @@
 
   <div id="toast-container"></div>
   <script type="module" src="./js/marcar-asistencia.js"></script>
-
-  <footer>
-    <p>© 2025 <a href="https://github.com/luisillo1cr" target="_blank">luisillo1cr</a>. Todos los derechos reservados.</p>
-  </footer>
 
   <script type="module" src="./js/sw-register.js"></script>
 
