--- a/client-dashboard.html
+++ b/client-dashboard.html
@@ -7,13 +7,18 @@
 
   <!-- Libs CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
-  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.css" rel="stylesheet" />
+
+  <!-- FullCalendar unificado -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/main.min.css">
+<script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.js"></script>
+
+
   <!-- Global CSS -->
   <link rel="stylesheet" href="./css/style.css" />
 
   <!-- PWA -->
   <link rel="icon" href="./assets/favicon-32x32.png" type="image/x-icon">
-  <link rel="manifest" href="./manifest.webmanifest?v=2025.11.02.v1">
+  <link rel="manifest" href="./manifest.webmanifest?v=2025.11.19.v1">
   <meta name="theme-color" content="#0d1117">
   <link rel="apple-touch-icon" href="./assets/android-chrome-512x512.png">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -28,8 +33,7 @@
   <!-- Sidebar -->
   <nav id="sidebar" class="sidebar">
     <ul>
-      <li><a href="./profile.html"><i class="bi bi-person-circle"></i>Mi perfil</a></li>
-      <li><a href="./client-dashboard.html"><i class="bi bi-calendar3"></i>Calendario</a></li>
+      <li><a href="./client-profile.html"><i class="bi bi-person-circle"></i>Mi perfil</a></li>
       <li><a href="./client-pagos.html"><i class="bi bi-receipt"></i>Realizar Pagos</a></li>
       <li><a id="navInstall" href="#"><i class="bi bi-download"></i> Instalar app</a></li>
       <li><a id="navInstallIOS" href="#"><i class="bi bi-apple"></i> ¿iPhone?</a></li>
@@ -120,8 +124,6 @@
   </script>
 
   <!-- Libs JS -->
-  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/locales/es.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.7/html5-qrcode.min.js"></script>
 
   <!-- App -->
@@ -131,8 +133,5 @@
   <script type="module" src="./js/pwa-install.js"></script>
   <script type="module" src="./js/sw-register.js"></script>
 
-  <footer>
-    <p>© 2025 <a href="https://github.com/luisillo1cr" target="_blank">luisillo1cr</a>. Todos los derechos reservados.</p>
-  </footer>
 </body>
 </html>
