--- a/index.html
+++ b/index.html
@@ -1,64 +1,167 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bocaraca MMA | Mantenimiento</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Iniciar Sesión - Bocaraca MMA</title>
 
-  <!-- Estilos principales del proyecto -->
-  <link rel="stylesheet" href="./css/maintance.css">
+  <link rel="stylesheet" href="./css/style.css" />
+
   <link rel="icon" type="image/png" href="./assets/favicon.ico" />
-  <!-- Bootstrap Icons (usado en el resto del proyecto) -->
-  <link 
-    rel="stylesheet" 
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
-  >
+  
+  <link rel="manifest" href="./manifest.webmanifest?v=2025.11.19.v1">
+  <meta name="theme-color" content="#0d1117">
 
-  <!-- Meta para PWA / colores del navegador (opcional, por si ya los usas) -->
-  <meta name="theme-color" content="#000000">
+<!-- iOS -->
+<link rel="apple-touch-icon" href="./assets/android-chrome-512x512.png">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="Bocaraca">
+
+
 </head>
-<body class="maintenance-body">
+<body class="auth-center login-page">
 
-  <div class="app-wrapper">
+  <main class="container">
+    <!-- Logo + nombre  -->
+    <div class="container" style="text-align:center">
+      <img src="./assets/android-chrome-512x512.png" alt="Logo Bocaraca MMA" class="logo-img" />
+      <p class="company-name">Bocaraca MMA</p>
+    </div>
 
-    <!-- Header simple con el logo/nombre del proyecto -->
+    <!-- Card con pestañas -->
+    <div class="card auth-card">
 
-    <main class="maintenance-main">
-      <section class="maintenance-card">
-        <div class="maintenance-icon-wrapper">
-          <i class="bi bi-wrench-adjustable-circle maintenance-icon" aria-hidden="true"></i>
-        </div>
+      <!-- Tabs -->
+      <div class="auth-tabs">
+        <button class="auth-tab active" data-target="#tab-login">Ingreso</button>
+        <button class="auth-tab" data-target="#tab-prices">Precios</button>
+      </div>
 
-        <h1 class="maintenance-title">Estamos en mantenimiento</h1>
+      <!-- Panel: Ingreso  -->
+      <section id="tab-login" class="auth-panel active">
+        <form id="loginForm" autocomplete="off">
+          <h2>Iniciar sesión</h2>
 
-        <p class="maintenance-text">
-          Estamos realizando una actualización importante de la plataforma de 
-          <strong>Bocaraca MMA</strong> para brindarte una mejor experiencia.
-        </p>
+          <label for="email">Correo Electrónico</label>
+          <input type="email" id="email" required autocomplete="off" />
 
-        <p class="maintenance-subtext">
-          Durante este tiempo el sistema puede estar temporalmente fuera de servicio.
-          Agradecemos tu paciencia y comprensión.
-        </p>
+          <label for="password">Contraseña</label>
+          <input type="password" id="password" required autocomplete="off" />
 
-        </div>
+          <button type="submit">Iniciar sesión</button>
 
+          <p>¿No tienes cuenta? <a href="./register.html">Regístrate</a></p>
+
+          <!-- Enlace a cambiar contraseña, inicialmente oculto -->
+          <p id="forgotPasswordLink" style="display:none;">
+            <a href="./change-password.html">¿Olvidaste tu contraseña?</a>
+          </p>
+        </form>
       </section>
-    </main>
 
-  </div>
+      <!-- Panel: Precios (solo informativo) -->
+      <section id="tab-prices" class="auth-panel">
+        <div class="pricing-grid">
+          <!-- Plan 1 -->
+          <article class="price-card">
+            <header class="price-head head-blue">
+              <h4 class="price-title">Clases Privadas</h4>
+            </header>
+            <div class="price-body">
+              <div class="price-amount">
+                $50 <small>/mes</small>
+              </div>
+              <ul class="price-list">
+                <li>• 3 clases Extra por semana</li>
+                <li>• Clases 8:30pm </li>
+                <li>• Lunes, Martes y Jueves </li>
+                <li>• Principiantes / Avanzados</li>
+                <!--<li class="muted">• Competitivo</li> -->
+              </ul>
+              <div class="price-cta">
+                <!--<span class="pill muted">Informativo</span>-->
+              </div>
+            </div>
+          </article>
 
-  <!-- Scripts mínimos necesarios -->
+          <!-- Plan 2 -->
+          <article class="price-card">
+            <header class="price-head head-green">
+              <h4 class="price-title">Plan Mensual</h4>
+            </header>
+            <div class="price-body">
+              <div class="price-amount">
+                $40 <small>/mes</small>
+              </div>
+              <ul class="price-list">
+                <li>• 2 Clases semanales</li>
+                <li>• Viernes 8:30pm </li>
+                <li>• Sabados 9:00am </li>
+                <li>• Principiantes / Intermedios </li>
+              </ul>
+              <div class="price-cta">
+                <span class="pill success">Recomendado</span>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+    </div>
+  </main>
+
+  <!-- Scripts de tu app -->
+  <script type="module" src="./js/login.js"></script>
+  <script type="module">
+    import { getAuth } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js";
+    import { app } from './js/firebase-config.js';
+    const auth = getAuth(app);
+  </script>
+
+  <!-- Toggle de pestañas: simple y sin dependencias -->
   <script>
-    // Recargar la página al presionar "Reintentar"
-    document.addEventListener("DOMContentLoaded", function () {
-      var btnRetry = document.getElementById("btnRetry");
-      if (btnRetry) {
-        btnRetry.addEventListener("click", function () {
-          window.location.reload();
+    document.addEventListener('DOMContentLoaded', () => {
+      const tabs = document.querySelectorAll('.auth-tab');
+      const panels = document.querySelectorAll('.auth-panel');
+
+      tabs.forEach(btn => {
+        btn.addEventListener('click', () => {
+          // activar botón
+          tabs.forEach(b => b.classList.remove('active'));
+          btn.classList.add('active');
+
+          // activar panel
+          const target = btn.getAttribute('data-target');
+          panels.forEach(p => p.classList.remove('active'));
+          document.querySelector(target).classList.add('active');
         });
-      }
+      });
     });
   </script>
+
+<script>
+  if ("serviceWorker" in navigator) {
+    window.addEventListener("load", () => {
+      navigator.serviceWorker.register("./service-worker.js", { scope: "./" })
+        .then((reg) => {
+          if (reg.waiting) reg.waiting.postMessage("SKIP_WAITING");
+          reg.addEventListener("updatefound", () => {
+            const nw = reg.installing;
+            if (!nw) return;
+            nw.addEventListener("statechange", () => {
+              if (nw.state === "installed" && navigator.serviceWorker.controller) {
+                reg.waiting?.postMessage("SKIP_WAITING");
+              }
+            });
+          });
+        })
+        .catch(console.error);
+    });
+  }
+</script>
+<script type="module" src="./js/pwa-install.js"></script>
+
+<script type="module" src="./js/sw-register.js"></script>
+
 </body>
 </html>
